--- a/index.html
+++ b/index.html
@@ -60,12 +60,39 @@
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="img/nat-1-large.jpg" alt="Photo-1"
-                                  class="composition__photo composition__photo--p1">
-                            <img src="img/nat-2-large.jpg" alt="Photo-2"
-                                 class="composition__photo composition__photo--p2">
-                            <img src="img/nat-3-large.jpg" alt="Photo-3"
-                                 class="composition__photo composition__photo--p3">
+                            <!--
+                                   example of implementation of Responsive Images using 2 techniques
+                                   1. Density Switching : change image resolution based on screen resolution
+                                   2. Resolution Switching :change image resolution based on screen dimensions
+                                   ** always keep the src attribute in case user has an old browser
+
+                                    properties values :
+                                    srcset : image source + real image with (separated by commas each img)
+                                    sizes : media query + picture width for that breakpoint + last value default img size (separated by commas each img)
+                            -->
+                            <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 25vw, 18.75em"
+                                 alt="Photo-1"
+                                 class="composition__photo composition__photo--p1"
+                                 src="img/nat-1-large.jpg">
+                            <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 25vw, 18.75em"
+                                 alt="Photo-2"
+                                 class="composition__photo composition__photo--p2"
+                                 src="img/nat-2-large.jpg">
+                            <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 25vw, 18.75em"
+                                 alt="Photo-3"
+                                 class="composition__photo composition__photo--p3"
+                                 src="img/nat-3-large.jpg">
+                            <!--
+                                <img src="img/nat-1-large.jpg" alt="Photo-1"
+                                      class="composition__photo composition__photo--p1">
+                                <img src="img/nat-2-large.jpg" alt="Photo-2"
+                                     class="composition__photo composition__photo--p2">
+                                <img src="img/nat-3-large.jpg" alt="Photo-3"
+                                     class="composition__photo composition__photo--p3">
+                             -->
                         </div>
                     </div>
                 </div>
@@ -295,7 +322,19 @@
 
         <footer class="footer">
             <div class="footer__logo-box">
-                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+                <!--
+                       example of implementation of Responsive Images using 2 techniques
+                       1. Art Direction : use of different image for smaller screens
+                       2. Density Switching : change image resolution based on screen resolution
+                       ** always keep the src attribute in case user has an old browser
+               -->
+                <picture class="footer__logo">
+                    <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                            media="(max-width: 37.5em)">
+                    <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+                         alt="Full logo"
+                         src="img/logo-green-2x.png">
+                </picture>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
@@ -337,43 +376,5 @@
                 </div>
             </div>
         </div>
-
-
-
-    <!--
-        <div class="row">
-            <div class="col-1-of-2">col-1-of-2</div>
-            <div class="col-1-of-2">col-1-of-2</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-3">col-1-of-3</div>
-            <div class="col-1-of-3">col-1-of-3</div>
-            <div class="col-1-of-3">col-1-of-3</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-3">col-1-of-3</div>
-            <div class="col-2-of-3">col-2-of-3</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">col-1-of-4</div>
-            <div class="col-1-of-4">col-1-of-4</div>
-            <div class="col-1-of-4">col-1-of-4</div>
-            <div class="col-1-of-4">col-1-of-4</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">col-1-of-4</div>
-            <div class="col-1-of-4">col-1-of-4</div>
-            <div class="col-2-of-4">col-2-of-4</div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">col-1-of-4</div>
-            <div class="col-3-of-4">col-3-of-4</div>
-        </div>
-       -->
     </body>
 </html>
